--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "nanoid": "^5.0.9",
-    "shortid": "^2.2.17"
+    "shortid": "^2.2.17",
+    "uuid": "^11.0.5"
   }
 }
